add codes, create folders

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">  
     <title>დავალება 4</title>
 </head>
 <body>
+    <div class="box">
+        <header>
+            <a class="logo" alt="logo" src=images/logo.svg>
+            </a>
+        </header>
     
 </body>
 </html>
