--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
         <header>
             <a class="logo" alt="logo" src=images/logo.svg>
             </a>
+            <nav class="navigation">
+				<ul class="ulnavigation">
+					<li class="linavigation">
+						<a class="anavigation" id="color" href="#">Home </a>
+					</li>
+					<li class="linavigation">
+						<a class="anavigation" href="#">News </a>
+					</li>
+					<li class="linavigation">
+						<a class="anavigation" href="#"> About </a>
+                    </li>
+                    <li class="linavigation">
+						<a class="anavigation" href="#">Contact </a>
+					</li>
+				</ul>
+			</nav>
         </header>
     
 </body>
