--- a/index.html
+++ b/index.html
@@ -3,32 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">  
+     <link rel="stylesheet" type="text/css" href="css/font.css">
+     <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>დავალება 4</title>
 </head>
 <body>
-    <div class="box">
-        <header>
-            <a class="logo" alt="logo" src=images/logo.svg>
-            </a>
-            <nav class="navigation">
-				<ul class="ulnavigation">
-					<li class="linavigation">
-						<a class="anavigation" id="color" href="#">Home </a>
-					</li>
-					<li class="linavigation">
-						<a class="anavigation" href="#">News </a>
-					</li>
-					<li class="linavigation">
-						<a class="anavigation" href="#"> About </a>
-                    </li>
-                    <li class="linavigation">
-						<a class="anavigation" href="#">Contact </a>
-					</li>
-				</ul>
-			</nav>
-        </header>
     
 </body>
 </html>
