--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>დავალება 4</title>
 </head>
 <body>
+    <h4 class="title1">Float Property</h4>
+    <div class="box">
+        
+    </div>
     
 </body>
 </html>
