--- a/index.html
+++ b/index.html
@@ -10,7 +10,32 @@
 <body>
     <h4 class="title1">Float Property</h4>
     <div class="box">
-        
+        <header>
+            <a class="logo" href="#">
+                <img src="images/logo.svg"  alt="logo">
+            </a>
+            <nav class="navtable">
+                <ul class="ulnavigation">
+                    <li class="linav">
+                        <a href="#" class="menu">Home</a>
+                    </li>
+                    <li class="linav">
+                        <a href="#" class="menu">News</a>
+                    </li>
+                    <li class="linav">
+                        <a href="#" class="menu">About</a>
+                    </li>
+                    <li class="linav">
+                        <a href="#" class="menu">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="clear"></div>
+        </header>
+        <div class="table1">
+            <img class="image1" alt="computer" src="images/computer.png">
+        </div>
+
     </div>
     
 </body>
