--- a/index.html
+++ b/index.html
@@ -1,76 +1,11 @@
 <!DOCTYPE html>
-<html>
- <head>
- 	<link rel="stylesheet" type="text/css" href="css/reset.css">
- 	<link rel="stylesheet" type="text/css" href="css/main.css">
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>დავალება 4</title>
- </head>
- <body>
-  <div class="greenbox">
-  	<header>
-  	  <a class="logo" href="#"> 
-  	  	<img class="logoimg" alt="logo" src="images/logo.svg" alt="logo">
-  	  </a>
-  	  <nav class="nav">
-  	  	<ul>
-  	  	 <li class="li"> 
-  	  		 <a href="#" class="menu">
-  	  			HOME
-  	  		  </a>
-  	  	 </li>
-  	  	 <li class="li">
-  	  	  <a href="#" class="menu">
-  	  			NEWS
-  	      </a>
-  	  	 </li>
-  	  	 <li class="li">
-  	  	  <a href="#"class="menu">ABOUT
-  	  	  </a>
-  	  	 </li>
-  	  	 <li class="li">
-  	  	  <a href="#"class="menu">CONTACT
-  	  	  </a>
-  	  	 </li>
-  	  	</ul>	
-  	  </nav>
-  	  <div class="clear"></div>
-  	</header>
-  	<div class="box1">
-  	    <img class="img1" alt="img1" src="images/computer.png">
-  		<p class="line1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  	    </p>
-  	    <p class="line2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  	    </p>
-  	    <div class="clear3"></div>
-  	</div>
-  	<div class="box2">
-  		<img class="img2" alt="img2" src="images/computer.png">
-  		<p class="line1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  	    </p>
-  	    <p class="line2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  	    </p>
-  	</div>
-  	<div class="clear1"></div>
-  </div>
- </body>
+</head>
+<body>
+	
+</body>
 </html>
