--- a/index.html
+++ b/index.html
@@ -3,12 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/font.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="styles/font.css">
+	<link rel="stylesheet" type="text/css" href="styles/font.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<title>დავალება 4</title>
 </head>
-<body>
+<body class="body">
+	<div class="main">
+		<p class="title">
+			Float Property
+		</p>
+	</div>
+	<div class="box">
+		<header>
+			<a href="#"><img src="images/logo.svg" alt="logo" class="logo"></a>
+				<nav class="navigation">
+					<ul class="ulnavigation">
+						<li class="linavigation">
+							<a class="anavigation" href="#">HOME</a>
+						</li>
+						<li class="linavigation">
+							<a class="anavigation" href="#">NEWS</a>
+						</li>
+						<li class="linavigation">
+							<a class="anavigation" href="#">ABOUT</a>
+						</li>
+						<li class="linavigation">
+							<a class="anavigation" href="#">CONTACT</a>
+						</li>
+					</ul>
+				</nav>
+		</header>
+	</div>
 	
 </body>
 </html>
