--- a/index.html
+++ b/index.html
@@ -1,40 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles/font.css">
-	<link rel="stylesheet" type="text/css" href="styles/font.css">
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	<title>დავალება 4</title>
-</head>
-<body class="body">
-	<div class="main">
-		<p class="title">
-			Float Property
-		</p>
-	</div>
-	<div class="box">
-		<header>
-			<a href="#"><img src="images/logo.svg" alt="logo" class="logo"></a>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="styles/reset.css">
+		<link rel="stylesheet" type="text/css" href="styles/font.css">
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
+		<title>Float property</title>
+	</head>
+	<body class="bd">
+		<div class="div0">
+			<p class="div0-p">
+				Float Property
+			</p>
+		</div>
+		<div class="div-0">
+			<header>
+				<a href="#"><img src="images/logo.svg" alt="logo" class="logo"></a>
 				<nav class="navigation">
-					<ul class="ulnavigation">
-						<li class="linavigation">
-							<a class="anavigation" href="#">HOME</a>
+					<ul class="navigation-ul">
+						<li class="navigation-li">
+							<a class="navigation-a" href="#">HOME</a>
 						</li>
-						<li class="linavigation">
-							<a class="anavigation" href="#">NEWS</a>
+						<li class="navigation-li">
+							<a class="navigation-a" href="#">NEWS</a>
 						</li>
-						<li class="linavigation">
-							<a class="anavigation" href="#">ABOUT</a>
+						<li class="navigation-li">
+							<a class="navigation-a" href="#">ABOUT</a>
 						</li>
-						<li class="linavigation">
-							<a class="anavigation" href="#">CONTACT</a>
+						<li class="navigation-li">
+							<a class="navigation-a" href="#">CONTACT</a>
 						</li>
 					</ul>
 				</nav>
-		</header>
-	</div>
-	
-</body>
+			</header>
+			<div class="div1">
+				<div class="div2">
+					<div class="div3">
+						<img class="img" src="images/computer.png" alt="pc">
+						<p class="paragraph">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Excepteur sint occaecat cupidatat no proident, sunt in culpa qui officia.
+							proident, sunt in culpa qui officia deserunt mollit.
+						</p>
+						<p class="paragraph" id="pr">
+							orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.Duis aute irure dolor in reprehenderit
+							cillum dolore.
+						</p>
+					</div>
+				</div>
+				<div class="div4">
+					<div class="div3">
+						<img class="img1" src="images/computer.png" alt="pc">
+						<p class="paragraph" id="pr2">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Excepteur sint occaecat cupidatat no proident, sunt in culpa qui officia.
+							proident, sunt in culpa qui officia deserunt mollit.
+						</p>
+						<p class="paragraph" id="paragraph1">
+							orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.Duis aute irure dolor in reprehenderit
+							cillum dolore.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
