--- a/index.html
+++ b/index.html
@@ -1,90 +1,87 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="styles/reset.css">
 		<link rel="stylesheet" type="text/css" href="styles/font.css">
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
-		<title>Float property</title>
+		<title>დავალება</title>
 	</head>
-	<body class="bd">
-		<div class="div0">
-			<p class="div0-p">
-				Float Property
-			</p>
-		</div>
-		<div class="div-0">
+	<body>
+		<p class="title1">Float Property</p>
+		<div class="maincontainer">
 			<header>
-				<a href="#"><img src="images/logo.svg" alt="logo" class="logo"></a>
-				<nav class="navigation">
-					<ul class="navigation-ul">
-						<li class="navigation-li">
-							<a class="navigation-a" href="#">HOME</a>
+				<a class="logo" href="#">
+					<img src="images/logo.svg"  alt="logo">
+				</a>
+				<nav>
+					<ul>
+						<li class="linavigation">
+							<a href="#" class="menu">Home</a>
 						</li>
-						<li class="navigation-li">
-							<a class="navigation-a" href="#">NEWS</a>
+						<li class="linavigation">
+							<a href="#" class="menu">News</a>
 						</li>
-						<li class="navigation-li">
-							<a class="navigation-a" href="#">ABOUT</a>
+						<li class="linavigation">
+							<a href="#" class="menu">About</a>
 						</li>
-						<li class="navigation-li">
-							<a class="navigation-a" href="#">CONTACT</a>
+						<li class="linavigation">
+							<a href="#" class="menu">Contact</a>
 						</li>
 					</ul>
 				</nav>
 			</header>
-			<div class="div1">
-				<div class="div2">
-					<div class="div3">
-						<img class="img" src="images/computer.png" alt="pc">
-						<p class="paragraph">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							Excepteur sint occaecat cupidatat no proident, sunt in culpa qui officia.
-							proident, sunt in culpa qui officia deserunt mollit.
+			<section>
+				<div class="container">
+					<div class="box1">
+						<div class="margin">
+							<img class="box-image1" src="images/computer.png">
+							<div>
+								<p>
+									LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING ELIAENEAN E 
+									 EROS ULLAMCORPER,
+									 ELEIFEND EROS ALIQUAM DOLOR. 
+									IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC HABI ASSE PL
+									  DICTUMS VIAMUS TURPIS LECTUS. PRAESEN MOLESTIE ELI  
+									LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING 
+									ELIAENEAN E  EROS ULLAMCORPER, ELEIFEND EROS ALIQUAM DOLOR. 
+									IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC HABI ASSE PL  
+									DICTUMS VIAMUS TURPIS LECTUS. PRAESEN MOLESTIE ELI VESTIBULUM
+								</p>
+							
+						
+								<p>
+									LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER,
+									 ELEIFEND EROS ALIQUAM DOLOR. IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC 
+									 HABI ASSE PL  DICTUMS VIAMUS TURPIS LECTUS. PRAESEN MOLESTIE ELI  LOREM IPSUM DOLOR 
+									 SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER, ELEIFEND EROS ALIQUAM 
+									 DOLOR. IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC HABI ASSE PL  DICTUMS VIAMUS
+									  TURPIS LECTUS. PRAESEN MOLESTIE ELI VESTIBULUM
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="box2">
+						<div class="margin">
+							<img class="box-image2" src="images/computer.png">
+						<p>
+							LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER,
+							ELEIFEND EROS ALIQUAM DOLOR. IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC 
+							HABI ASSE PL  DICTUMS VIAMUS TURPIS LECTUS. PRAESEN MOLESTIE ELI  LOREM IPSUM DOLOR 
+							SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER, ELEIFEND EROS ALIQUAM 
+							DOLOR. IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC HABI ASSE PL  DICTUMS VIAMUS
+							 TURPIS LECTUS. PRAESEN MOLESTIE ELI VESTIBULUM						
+						<p>
+							LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER,
+							ELEIFEND EROS ALIQUAM DOLOR. IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC 
+							HABI ASSE PL  DICTUMS VIAMUS TURPIS LECTUS. PRAESEN MOLESTIE ELI  LOREM IPSUM DOLOR 
+							SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER, ELEIFEND EROS ALIQUAM 
+							DOLOR. IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC HABI ASSE PL  DICTUMS VIAMUS
+							 TURPIS LECTUS. PRAESEN MOLESTIE ELI VESTIBULUM					
 						</p>
-						<p class="paragraph" id="pr">
-							orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur.laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur.Duis aute irure dolor in reprehenderit
-							cillum dolore.
-						</p>
+						</div>
 					</div>
 				</div>
-				<div class="div4">
-					<div class="div3">
-						<img class="img1" src="images/computer.png" alt="pc">
-						<p class="paragraph" id="pr2">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							Excepteur sint occaecat cupidatat no proident, sunt in culpa qui officia.
-							proident, sunt in culpa qui officia deserunt mollit.
-						</p>
-						<p class="paragraph" id="paragraph1">
-							orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur.laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur.Duis aute irure dolor in reprehenderit
-							cillum dolore.
-						</p>
-					</div>
-				</div>
-			</div>
+			</section>
 		</div>
 	</body>
 </html>
