--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 				</nav>
 			</header>
 			<section>
-				<div class="container">
-					<div class="box1">
-						<div class="margin">
+				<div class="div">
+					<div class="content1">
+						<div class="border">
 							<img class="box-image1" src="images/computer.png">
 							<div>
 								<p>
@@ -60,8 +60,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="box2">
-						<div class="margin">
+					<div class="content2">
+						<div class="border">
 							<img class="box-image2" src="images/computer.png">
 						<p>
 							LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER,
