--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<img src="images/logo.svg"  alt="logo">
 				</a>
 				<nav>
-					<ul>
+					<ul class="ulnavigation">
 						<li class="linavigation">
 							<a href="#" class="menu">Home</a>
 						</li>
