update html, write some comments

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<section>
 				<div class="div">
 					<div class="content1">
+						<!-- this is for space between text and border-->
 						<div class="border">
 							<img class="box-image1" src="images/computer.png">
 							<div>
@@ -61,6 +62,7 @@
 						</div>
 					</div>
 					<div class="content2">
+					<!-- this border for space between text and container-->
 						<div class="border">
 							<img class="box-image2" src="images/computer.png">
 						<p>
