--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/reset.css">
 		<link rel="stylesheet" type="text/css" href="styles/font.css">
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
-		<title>დავალება</title>
+		<title>დავალება 4</title>
 	</head>
 	<body>
 		<p class="title1">Float Property</p>
