add some comments

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 			<section>
 				<div class="div">
 					<div class="content1">
-						<!-- this is for space between text and border-->
+						<!-- this border is  for space between text and content-->
 						<div class="border">
 							<img class="box-image1" src="images/computer.png">
 							<div>
+								<!-- ეს არის ლორემის ტექსტი. ფაილიდან ვერ დავაკოპირე -->
 								<p>
 									LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING ELIAENEAN E 
 									 EROS ULLAMCORPER,
@@ -49,7 +50,7 @@
 									DICTUMS VIAMUS TURPIS LECTUS. PRAESEN MOLESTIE ELI VESTIBULUM
 								</p>
 							
-						
+						<!-- იგივე -->
 								<p>
 									LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER,
 									 ELEIFEND EROS ALIQUAM DOLOR. IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC 
@@ -65,6 +66,7 @@
 					<!-- this border for space between text and container-->
 						<div class="border">
 							<img class="box-image2" src="images/computer.png">
+							<!-- ტექსტი -->
 						<p>
 							LOREM IPSUM DOLOR SI AME , CONSECTETUR ADIPISCING ELIAENEAN E  EROS ULLAMCORPER,
 							ELEIFEND EROS ALIQUAM DOLOR. IN U  EX MAURIS CURSUS COMMODO AE EU METUS. IN HAC 
