--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="maincontainer">
 			<header>
 				<a class="logo" href="#">
-					<img src="images/logo.svg"  alt="logo">
+					<img src="images/logo1.svg"  alt="logo">
 				</a>
 				<nav>
 					<ul class="ulnavigation">
